--- a/Pokedex/app/src/main/res/values/strings.xml
+++ b/Pokedex/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Pokedex</string>
+    <string name="pokedex">Pokedéx</string>
+    <string name="entrar">Entrar</string>
+    <string name="pikachu_correndo">Pikachu Correndo</string>
 </resources>
