--- a/Pokedex/app/src/main/res/values/strings.xml
+++ b/Pokedex/app/src/main/res/values/strings.xml
@@ -5,24 +5,40 @@
     <string name="pikachu_correndo">Pikachu Correndo</string>
     <string name="carregando">Carregando</string>
     <string name="title_activity_listas">Listas de Pokémons</string>
-    <string name="tab_title_1">#1 Geracao</string>
-    <string name="tab_title_2">Tipo</string>
+    <string name="tab_title_1">1a Geracao</string>
+    <string name="tab_title_2">2a Geracao</string>
+    <string name="tab_title_3">Tipos</string>
     <string name="pokemon">Pokémon</string>
     <string name="tipo_2">Tipo 2</string>
     <string name="tipo_1">Tipo 1</string>
     <string name="title_activity_detalhes_pokemon">Detalhes Pokémon</string>
     <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="altura">Altura</string>
     <string name="peso">Peso</string>
     <string name="pokedex_logo_dourado">Pokédex Logo Dourado</string>
+
+    <string-array name="lista_tipos">
+        <item name="bug">Bug</item>
+        <item name="dark">Dark</item>
+        <item name="dragon">Dragon</item>
+        <item name="electric">Electric</item>
+        <item name="fairy">Fairy</item>
+        <item name="fighting">Fighting</item>
+        <item name="fire">Fire</item>
+        <item name="flying">Flying</item>
+        <item name="ghost">Ghost</item>
+        <item name="grass">Grass</item>
+        <item name="ground">Ground</item>
+        <item name="ice">Ice</item>
+        <item name="normal">Normal</item>
+        <item name="poison">Poison</item>
+        <item name="psychic">Psychic</item>
+        <item name="rock">Rock</item>
+        <item name="steel">Steel</item>
+        <item name="water">Water</item>
+    </string-array>
+
     <string name="bug">Bug</string>
     <string name="dark">Dark</string>
     <string name="dragon">Dragon</string>
@@ -41,6 +57,7 @@
     <string name="rock">Rock</string>
     <string name="steel">Steel</string>
     <string name="water">Water</string>
+
     <string name="icone_ver_mais">Ícone Ver Mais</string>
     <string name="icone_tipo">Ícone Tipo</string>
     <string name="tipo">Tipo:</string>
