--- a/Pokedex/app/src/main/res/values/strings.xml
+++ b/Pokedex/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="icone_ver_mais">Ícone Ver Mais</string>
     <string name="icone_tipo">Ícone Tipo</string>
     <string name="tipo">Tipo:</string>
+    <string name="obtendo_dados_de_pok_mons_n_naguarde_um_instante">Obtendo dados de pokémons...\n\nAguarde um instante.</string>
 </resources>
