feat: implementada busca por todos os pokemons de todas as gerações até o momento (8a geração, fix: alterada api de obtenção de pokemons (api utilizada anteriormente nao esta mais em funcionamento, versão atual implementada não limita a quantidade de requisições) bug: necessário corrigir escritos de nomes compostos de pokemons, alterar proporções de nome e tipos (nomes muito longos estão sendo quebrados na tela, bem como os nomes e imagens dos tipos)

--- a/Pokedex/app/src/main/res/values/strings.xml
+++ b/Pokedex/app/src/main/res/values/strings.xml
@@ -7,7 +7,13 @@
     <string name="title_activity_listas">Listas de Pokémons</string>
     <string name="tab_title_1">1a Geracao</string>
     <string name="tab_title_2">2a Geracao</string>
-    <string name="tab_title_3">Tipos</string>
+    <string name="tab_title_3">3a Geracao</string>
+    <string name="tab_title_4">4a Geracao</string>
+    <string name="tab_title_5">5a Geracao</string>
+    <string name="tab_title_6">6a Geracao</string>
+    <string name="tab_title_7">7a Geracao</string>
+    <string name="tab_title_8">8a Geracao</string>
+    <string name="tab_title_9">Tipos</string>
     <string name="pokemon">Pokémon</string>
     <string name="tipo_2">Tipo 2</string>
     <string name="tipo_1">Tipo 1</string>
